fix: header, overlap images, default color button, hover effect

--- a/src/styles/blocks/categories.scss
+++ b/src/styles/blocks/categories.scss
@@ -53,7 +53,7 @@
     position: relative;
 
     &--wide {
-      @include hover(transform, scale(1.1));
+      @include hover(transform, scale(1.05));
 
       @include on-tablet {
         grid-column: span 4;
@@ -68,7 +68,7 @@
       height: 0;
       padding-bottom: 100%;
 
-      @include hover(transform, scale(1.1));
+      @include hover(transform, scale(1.05));
 
       @include on-tablet {
         grid-column: span 2;
