--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -86,6 +86,7 @@
   }
 
   &__button {
+    cursor: pointer;
     width: 100%;
 
     color: #292929;
@@ -97,6 +98,10 @@
     border-radius: 8px;
 
     margin-bottom: 48px;
+
+    &:focus {
+      outline: none;
+    }
 
     @include on-tablet {
       margin-bottom: 80px;
@@ -111,13 +116,23 @@
     }
 
     &-title {
+      display: block;
+      text-decoration: none;
       color: #9393a3;
       font-size: 14px;
       line-height: 19.6px;
       font-weight: 400;
+      margin-bottom: 8px;
+
+      &:hover {
+        font-weight: 700;
+        color: #191919;
+      }
     }
 
     &-link {
+      display: block;
+      margin-bottom: 24px;
       text-decoration: none;
       color: #191919;
       font-family: 'Space Mono', sans-serif;
