--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -15,17 +15,25 @@
   &--phone {
     position: relative;
     background-image: url(../images/icons/phone-icon.svg);
-    &:hover::before {
-      display: inline-block;
 
-      position: absolute;
-      content: '+1 234 555-55-55';
-      width: 140px;
-      right: 30px;
-      top: 5px;
-      text-decoration: none;
-      color: #292929;
-      align-self: center;
+    @include on-desktop {
+      &:hover::before {
+        display: inline-block;
+
+        position: absolute;
+        content: '+1 234 555-55-55';
+        width: 140px;
+        right: 20px;
+        top: 8px;
+        text-decoration: none;
+        color: #292929;
+        font-family: Inter, sans-serif;
+        font-weight: 700;
+        line-height: 16px;
+        letter-spacing: 2px;
+        font-size: 12px;
+        align-self: center;
+      }
     }
   }
   &--menu {
